Bug 428071. Tie NS_ACTIVATE/NS_DEACTIVE state to a window's 'main' status. patch by Markus Stange and Stephen Michaud, r=josh,r=mstange,sr=roc,a=mconnor. God have mercy on us all